// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`typescript config snapshot: full config structure (non-type-aware): typescript-non-type-aware 1`] = `
[
  {
    "languageOptions": undefined,
    "name": "hexadrop/typescript/setup",
    "plugins": [
      "typescript",
    ],
  },
  {
    "files": [
      "**/*.?([cm])[jt]s?(x)",
    ],
    "languageOptions": {
      "parser": "<parser>",
    },
    "name": "hexadrop/typescript/setup/parser",
    "plugins": undefined,
  },
  {
    "files": [
      "**/*.?([cm])[jt]s?(x)",
    ],
    "languageOptions": undefined,
    "name": "hexadrop/typescript/rules",
    "plugins": undefined,
    "rules": {
      "constructor-super": "off",
      "getter-return": "off",
      "no-array-constructor": "off",
      "no-class-assign": "off",
      "no-const-assign": "off",
      "no-dupe-args": "off",
      "no-dupe-class-members": "off",
      "no-dupe-keys": "off",
      "no-func-assign": "off",
      "no-import-assign": "off",
      "no-new-native-nonconstructor": "off",
      "no-new-symbol": "off",
      "no-obj-calls": "off",
      "no-redeclare": "off",
      "no-setter-return": "off",
      "no-this-before-super": "off",
      "no-undef": "off",
      "no-unreachable": "off",
      "no-unsafe-negation": "off",
      "no-unused-expressions": "off",
      "no-unused-vars": "off",
      "no-useless-constructor": "off",
      "no-var": "error",
      "no-with": "off",
      "prefer-const": "error",
      "prefer-rest-params": "error",
      "prefer-spread": "error",
      "typescript/ban-ts-comment": [
        "error",
        {
          "minimumDescriptionLength": 10,
        },
      ],
      "typescript/explicit-module-boundary-types": [
        "error",
      ],
      "typescript/no-array-constructor": "error",
      "typescript/no-duplicate-enum-values": "error",
      "typescript/no-dynamic-delete": "error",
      "typescript/no-empty-object-type": "error",
      "typescript/no-explicit-any": "error",
      "typescript/no-extra-non-null-assertion": "error",
      "typescript/no-extraneous-class": "off",
      "typescript/no-invalid-void-type": "error",
      "typescript/no-misused-new": "error",
      "typescript/no-namespace": "error",
      "typescript/no-non-null-asserted-nullish-coalescing": "error",
      "typescript/no-non-null-asserted-optional-chain": "error",
      "typescript/no-non-null-assertion": "error",
      "typescript/no-require-imports": "error",
      "typescript/no-this-alias": "error",
      "typescript/no-unnecessary-type-constraint": "error",
      "typescript/no-unsafe-declaration-merging": "error",
      "typescript/no-unsafe-function-type": "error",
      "typescript/no-unused-expressions": "error",
      "typescript/no-unused-vars": "off",
      "typescript/no-useless-constructor": "error",
      "typescript/no-wrapper-object-types": "error",
      "typescript/prefer-as-const": "error",
      "typescript/prefer-literal-enum-member": "error",
      "typescript/prefer-namespace-keyword": "error",
      "typescript/triple-slash-reference": "error",
      "typescript/unified-signatures": "error",
    },
  },
  {
    "files": [
      "**/*.d.ts",
    ],
    "languageOptions": undefined,
    "name": "hexadrop/typescript/rules/dts",
    "plugins": undefined,
    "rules": {
      "typescript/triple-slash-reference": "off",
    },
  },
  {
    "files": [
      "**/*.spec.[jt]s?(x)",
      "**/*.test.[jt]s?(x)",
    ],
    "languageOptions": undefined,
    "name": "hexadrop/typescript/rules/test",
    "plugins": undefined,
    "rules": {
      "typescript/no-confusing-void-expression": "off",
    },
  },
]
`;

exports[`typescript config snapshot: full config structure (type-aware): typescript-type-aware 1`] = `
[
  {
    "languageOptions": undefined,
    "name": "hexadrop/typescript/setup",
    "plugins": [
      "typescript",
    ],
  },
  {
    "files": [
      "**/*.?([cm])js?(x)",
      "**/*.md/**/*.?([cm])[jt]s?(x)",
    ],
    "languageOptions": {
      "parser": "<parser>",
    },
    "name": "hexadrop/typescript/setup/parser",
    "plugins": undefined,
  },
  {
    "files": [
      "**/*.?([cm])ts?(x)",
    ],
    "ignores": [
      "**/*.md/**/*.?([cm])[jt]s?(x)",
    ],
    "languageOptions": {
      "parser": "<parser>",
    },
    "name": "hexadrop/typescript/setup/parser/type-aware",
    "plugins": undefined,
  },
  {
    "files": [
      "**/*.?([cm])[jt]s?(x)",
    ],
    "languageOptions": undefined,
    "name": "hexadrop/typescript/rules",
    "plugins": undefined,
    "rules": {
      "constructor-super": "off",
      "getter-return": "off",
      "no-array-constructor": "off",
      "no-class-assign": "off",
      "no-const-assign": "off",
      "no-dupe-args": "off",
      "no-dupe-class-members": "off",
      "no-dupe-keys": "off",
      "no-func-assign": "off",
      "no-import-assign": "off",
      "no-new-native-nonconstructor": "off",
      "no-new-symbol": "off",
      "no-obj-calls": "off",
      "no-redeclare": "off",
      "no-setter-return": "off",
      "no-this-before-super": "off",
      "no-undef": "off",
      "no-unreachable": "off",
      "no-unsafe-negation": "off",
      "no-unused-expressions": "off",
      "no-unused-vars": "off",
      "no-useless-constructor": "off",
      "no-var": "error",
      "no-with": "off",
      "prefer-const": "error",
      "prefer-rest-params": "error",
      "prefer-spread": "error",
      "typescript/ban-ts-comment": [
        "error",
        {
          "minimumDescriptionLength": 10,
        },
      ],
      "typescript/explicit-module-boundary-types": [
        "error",
      ],
      "typescript/no-array-constructor": "error",
      "typescript/no-duplicate-enum-values": "error",
      "typescript/no-dynamic-delete": "error",
      "typescript/no-empty-object-type": "error",
      "typescript/no-explicit-any": "error",
      "typescript/no-extra-non-null-assertion": "error",
      "typescript/no-extraneous-class": "off",
      "typescript/no-invalid-void-type": "error",
      "typescript/no-misused-new": "error",
      "typescript/no-namespace": "error",
      "typescript/no-non-null-asserted-nullish-coalescing": "error",
      "typescript/no-non-null-asserted-optional-chain": "error",
      "typescript/no-non-null-assertion": "error",
      "typescript/no-require-imports": "error",
      "typescript/no-this-alias": "error",
      "typescript/no-unnecessary-type-constraint": "error",
      "typescript/no-unsafe-declaration-merging": "error",
      "typescript/no-unsafe-function-type": "error",
      "typescript/no-unused-expressions": "error",
      "typescript/no-unused-vars": "off",
      "typescript/no-useless-constructor": "error",
      "typescript/no-wrapper-object-types": "error",
      "typescript/prefer-as-const": "error",
      "typescript/prefer-literal-enum-member": "error",
      "typescript/prefer-namespace-keyword": "error",
      "typescript/triple-slash-reference": "error",
      "typescript/unified-signatures": "error",
    },
  },
  {
    "files": [
      "**/*.d.ts",
    ],
    "languageOptions": undefined,
    "name": "hexadrop/typescript/rules/dts",
    "plugins": undefined,
    "rules": {
      "typescript/triple-slash-reference": "off",
    },
  },
  {
    "files": [
      "**/*.?([cm])ts?(x)",
    ],
    "ignores": [
      "**/*.md/**/*.?([cm])[jt]s?(x)",
    ],
    "languageOptions": undefined,
    "name": "hexadrop/typescript/rules/type-aware",
    "plugins": undefined,
    "rules": {
      "no-implied-eval": "off",
      "no-return-await": "off",
      "no-throw-literal": "off",
      "prefer-promise-reject-errors": "off",
      "require-await": "off",
      "typescript/await-thenable": "error",
      "typescript/no-array-delete": "error",
      "typescript/no-base-to-string": "error",
      "typescript/no-confusing-void-expression": [
        "error",
        {
          "ignoreArrowShorthand": true,
        },
      ],
      "typescript/no-deprecated": "warn",
      "typescript/no-duplicate-type-constituents": "error",
      "typescript/no-floating-promises": "error",
      "typescript/no-for-in-array": "error",
      "typescript/no-implied-eval": "error",
      "typescript/no-meaningless-void-operator": "error",
      "typescript/no-misused-promises": "error",
      "typescript/no-misused-spread": "error",
      "typescript/no-mixed-enums": "error",
      "typescript/no-redundant-type-constituents": "error",
      "typescript/no-unnecessary-boolean-literal-compare": "error",
      "typescript/no-unnecessary-condition": "error",
      "typescript/no-unnecessary-template-expression": "error",
      "typescript/no-unnecessary-type-arguments": "error",
      "typescript/no-unnecessary-type-assertion": "error",
      "typescript/no-unnecessary-type-conversion": "error",
      "typescript/no-unnecessary-type-parameters": "error",
      "typescript/no-unsafe-argument": "error",
      "typescript/no-unsafe-assignment": "error",
      "typescript/no-unsafe-call": "error",
      "typescript/no-unsafe-enum-comparison": "error",
      "typescript/no-unsafe-member-access": "error",
      "typescript/no-unsafe-return": "error",
      "typescript/no-unsafe-unary-minus": "error",
      "typescript/no-unused-vars": "off",
      "typescript/no-useless-default-assignment": "error",
      "typescript/only-throw-error": "error",
      "typescript/prefer-promise-reject-errors": "error",
      "typescript/prefer-readonly": [
        "error",
      ],
      "typescript/prefer-reduce-type-parameter": "error",
      "typescript/prefer-return-this-type": "error",
      "typescript/promise-function-async": [
        "error",
        {
          "checkArrowFunctions": false,
        },
      ],
      "typescript/related-getter-setter-pairs": "error",
      "typescript/require-await": "error",
      "typescript/restrict-plus-operands": [
        "error",
        {
          "allowAny": false,
          "allowBoolean": false,
          "allowNullish": false,
          "allowNumberAndString": false,
          "allowRegExp": false,
        },
      ],
      "typescript/restrict-template-expressions": [
        "error",
        {
          "allowAny": false,
          "allowBoolean": false,
          "allowNever": false,
          "allowNullish": false,
          "allowNumber": false,
          "allowRegExp": false,
        },
      ],
      "typescript/return-await": [
        "error",
        "error-handling-correctness-only",
      ],
      "typescript/switch-exhaustiveness-check": [
        "error",
      ],
      "typescript/unbound-method": "error",
      "typescript/use-unknown-in-catch-callback-variable": "error",
    },
  },
  {
    "files": [
      "**/*.spec.[jt]s?(x)",
      "**/*.test.[jt]s?(x)",
    ],
    "languageOptions": undefined,
    "name": "hexadrop/typescript/rules/test",
    "plugins": undefined,
    "rules": {
      "typescript/no-confusing-void-expression": "off",
    },
  },
]
`;
